# project666

./: .env.example  .gitignore  README.md  pyproject.toml  readme.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_new_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  index.html  masks.py  processing.py  utils.py
tests/: conftest.py  test_card_number_generator.py  test_decorators.py  test_external_api.py  test_filter_by_currency.py  test_masks.py  test_processing.py  test_transaction_descriptions.py  test_utils.py  test_widget.py
