[tool.poetry]
name = "project666"
version = "0.1.0"
description = ""
authors = ["Dmitriy Koluzayev <tornadomg.team@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.1"
click = "==8.2.2"
generators = "^2020.4.27"
transactions = "^0.2.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude ='.venv'

[tool.isort]
# максимальная длина строки
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'


[tool.flake8]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude ='.venv'
